Revision history for Config::Abstraction - Configuration Abstraction Layer

0.23
	Fix tests on machines that have configuration files installed elsewhere
	Look in more places for the config files, when config_dirs is not given
	'file' means 'config_file'

0.22	Fri May  9 14:31:28 EDT 2025
	Fix CI tests

0.21	Fri May  9 13:55:23 EDT 2025
	Handle YAML crashes on reading an INI file

0.20	Tue May  6 20:07:40 EDT 2025
	Added merge_defaults()

0.19	Tue May  6 13:48:46 EDT 2025
	Make the data passed to the contructor be the default values

0.18	Tue May  6 08:17:31 EDT 2025
	Use the file config_dirs/default as the base
	Honour CONFIG_DIR

0.17	Mon May  5 07:45:21 EDT 2025
	Try harder to find the files

0.16	Thu May  1 07:25:25 EDT 2025
	Handle mixed case environments a bit better

0.15	Tue Apr 29 20:24:10 EDT 2025
	Makefile.PL: Prefer XML::PP, since XML::Simple can have loading problems on Windows
	Improved the fallback to Config::Auto when XML::Simple isn't working
	new() now fails, silently, if there's no config file
	Use Config::Abstract to load .pl files, but note RT#164587

0.14	Mon Apr 28 11:17:20 EDT 2025
	Allow logger to be an array ref
	Fail more gracefully
	Fall back to XML::PP if XML::Simple can't be loaded
	Config_path is now a list

0.13	Tue Apr 22 15:08:00 EDT 2025
	Added the data option to new()
	sep_char option to new() wasn't being remembered
	Added AUTOLOAD support
	Fix typo - 'durs' should read 'dirs'

0.12	Mon Apr 21 10:29:54 EDT 2025
	Allow environment variables to use '::' to separate fields

0.11	Mon Apr 21 08:56:35 EDT 2025
	Make the environment variable override simpler for simple cases

0.10	Sun Apr 13 21:45:12 EDT 2025
	Check with JSON::Parse first
	Use Data::Reuse, but note RT#100461
	Note the filetype

0.09	Sat Apr 12 15:48:48 EDT 2025
	Better fix for old Perls

0.08	Sat Apr 12 10:59:22 EDT 2025
	Fix code on older Perls

0.07	Thu Apr 10 19:40:41 EDT 2025
	Change the default for config_dirs to $HOME/.conf, $DOCUMENT_ROOT/conf, ./conf